adding 35 only for checking jenkins

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ https://www.tooplate.com/view/2125-artxibition
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6">
-                    <span>Hey! The Show is Starting in 15 Days.</span>
+                    <span>Hey! The Show is Starting in 35 Days only.</span>
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <div class="text-button">
