--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ https://www.tooplate.com/view/2125-artxibition
     
     <!-- ***** Pre HEader ***** -->
     <div class="pre-header">
-        <div class="container">
+        <div class="container tools">
             <div class="row">
                 <div class="col-lg-6 col-sm-6">
                     <span>Hey! The Show is Starting in 35 Days only.</span>
