--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ https://www.tooplate.com/view/2125-artxibition
     </div>
     <!-- ***** Preloader system End ***** -->
     
-    <!-- ***** Pre HEader ***** -->
+    <!-- ***** Pre HEader system ***** -->
     <div class="pre-header">
-        <div class="container">
+        <div class="srk container ">
             <div class="row">
                 <div class="col-lg-6 col-sm-6">
                     <span>Hey hello! The Show is Starting in 15 Days.</span>
